--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,9 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+        mavenLocal()
         google()
+        jcenter()
         mavenCentral()
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
         maven { url "https://jitpack.io" }
