--- a/gradle/root_general.gradle
+++ b/gradle/root_general.gradle
@@ -3,14 +3,14 @@ allprojects {
         androidBuildTools = '27.0.2'
         supportLibVersion = '25.4.0'
         AnySoftKeyboardApiVersion = 'e14aed871ee542140c071ed4579cb8f7c807b7a3'
-        robolectricVersion = '3.5.1'
+        robolectricVersion = '3.6.1'
 
         sdkTargetVersion = 27
         sdkCompileVersion = 27
         sdkMinimumVersion = 9
 
-        isCircleCi = 'true'.equals(System.getenv("CIRCLECI"))
-        isCi = isCircleCi || 'true'.equals(System.getenv("CI"))
+        isCircleCi = 'true' == System.getenv("CIRCLECI")
+        isCi = isCircleCi || 'true' == System.getenv("CI")
     }
 }
 
